# omegaBot

./: .gitignore  LICENSE  omegaBot.cabal  stack.yaml
app/: Main.hs
src/: Helpers.hs  OmegaUp.hs  Slack.hs
src/OmegaUp/: Types.hs
src/Slack/: Types.hs
